--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -279,6 +279,9 @@
         padding: 0.8rem 0.5rem;
         font-size: 1.6rem;
         outline: none;
+        &:invalid {
+          box-shadow: none;
+        }
         &:focus {
           border: 1px solid ($second-font-color);
         }
