--- a/src/styles/components/_desktopProjects.scss
+++ b/src/styles/components/_desktopProjects.scss
@@ -18,7 +18,7 @@
     }
     .description {
       flex-basis: 70%;
-      margin-left: 1rem;
+      margin: 0 1rem;
       @include mediaQuery(width1820) {
         flex-basis: 75%;
       }
